Token Align Fix
Fixed the token alignment with the vertical bar in small screens

--- a/css/ultimeline.css
+++ b/css/ultimeline.css
@@ -143,7 +143,7 @@
     right: auto;
   }
   .timeline-token {
-    left: 21px;
+    left: 6px;
     margin-left: 0;
     top: 8px;
   }
